# pyMasterLoadsTool

./: .gitignore  README.md  main.py  pyMaster_loads_tool - Copy.xlsx  pyMaster_loads_tool.xlsx  pyproject.toml  test2.py
pymasterloadstool/: contour_handler.py  enums.py  exporter.py  importer.py  pyLoad.py  reader.py  settings.py  structure.py  utilities.py  writer.py  xlsreader.py  xlswriter.py
tests/: test_importer.py  test_utilities.py  test_utils.py
