[tool.poetry]
name = "pymasterloadstool"
version = "0.1.0"
description = ""
authors = ["Marcin Wolinski <mwo@woodthilsted.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openpyxl = "^3.1.5"
pythonnet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
